--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/start"
+    "start": "node ./bin/start",
+    "test": "mocha ./test/*.js --timeout 10000"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -20,5 +21,10 @@
     "passport": "^0.3.2",
     "passport-jwt": "^4.0.0",
     "serve-favicon": "^2.5.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^2.0.1",
+    "mocha": "^2.4.5"
   }
 }
