--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/start",
-    "test": "mocha ./test/*.js --timeout 10000"
+    "test": "mocha ./test/*.js --timeout 10000",
+    "testWindow": "SET NODE_TLS_REJECT_UNAUTHORIZED=0&SET NODE_ENV=test& mocha ./test/*.js --timeout 10000 --reporter mochawesome"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -14,6 +15,7 @@
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "fastest-validator": "^0.6.17",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.3",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "mochawesome": "^3.1.1"
   }
 }
