--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/start",
+    "start": "node --inspect ./bin/start",
     "test": "mocha ./test/*.js --timeout 10000",
     "testWindow": "SET NODE_TLS_REJECT_UNAUTHORIZED=0&SET NODE_ENV=test& mocha ./test/*.js --timeout 10000 --reporter mochawesome",
     "initWindow": "SET NODE_ENV=test&node ./test/initDataBase.js"
